tests/paczka1/fuzzy1/55604328.err
Error in line 1: gtgjYTEWo8 A326 20,0
Error in line 5: gtgjYTEWo8 S842 50,4
Error in line 18: gtgjYTEWo8 S264 203,7
Error in line 17: JTRZ97a A326 7,1
Error in line 24: S842 S264 97,2
Error in line 32: JTRZ97a S264 19,4
Error in line 37: S842 S264 30,6
